--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: 'arabel1a's landing page'
+title: "arabel1a's landing page"
 description: "A CNC ML kiddie"
-url: "https://arabel1a.github.io"
 
 header_pages:
   - index.md
