--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ header_pages:
 
 style: dark
 
-# footer: 'follow us on <a href="https://twitter.com/">twitter</a>'
+footer: 'contact via tg <a href="https://t.me/arabel1a">@arabel1a</a>'
 
 # Build settings
 markdown: kramdown
