--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-remote_theme: hemangsk/DevJournal
+remote_theme: arabel1a/jekyll-theme-console
+
 title: "arabel1a's landing page"
 description: "A CNC ML kiddie"
 
